Create REST API Master Material Detail
